# trame-gridstack

./: MANIFEST.in  README.md  pyproject.toml  tw.patch
examples/: basic.py  dashboard.py  nested_grids.py  simple_layout.py  title_drag.py
trame_gridstack/: __init__.py
trame_gridstack/module/: __init__.py
trame_gridstack/module/serve/: trame-gridstack.umd.js
trame_gridstack/widgets/: __init__,py  gridstack.py
