[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trame-gridstack"
version = "0.1.0"
description = "GridStack widgets for trame, inspired by trame-grid-layout"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "trame-gridstack contributors" }
]
keywords = ["trame", "gridstack", "dashboard", "vue"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "trame>=3.0",
  "trame-client>=2.11",
]

[project.urls]
Homepage = "https://github.com/Kitware/trame-grid-layout"
Repository = "https://github.com/Kitware/trame-grid-layout"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["trame_gridstack*"]
